# anfem

./: .gitignore  anfem.py  anfem_data_analysis.ipynb  annulus.ipynb  annulus.msh  annulus.py  environment.yaml  gen_mesh.py  gen_square_mesh.py  gmsh_python_API.ipynb  monitor_simulation.py  parameter_test.ipynb  pyproject.toml  readme.md  requirements.txt  setup.sh  test_channel_width.py  test_length_scale.py  test_mesh_resolution.py  test_mpi_speed.py  test_time_step.py  utils.py
anfem/: anfem.py  cli.py  config.py  utils.py
anfem/actnem/: __init__.py  params.py
anfem/mesh/: __init__.py  gen_mesh.py  gen_square_mesh.py
mesh/: annulus.geo  annulus.msh  periodic.geo  periodic.msh  ratchet.geo  ratchet.msh
notebooks/: anfem_data_analysis.ipynb  annulus.ipynb  gmsh_python_API.ipynb  parameter_test.ipynb
tests/: test_channel_length.py  test_channel_width.py  test_system_size.py
